# DPP40-MVP-Workshop-3

./: README.md  generate_static_docs.py  pyproject.toml
src/: main.py
src/api/: dependencies.py  visualization.py
src/api/endpoints/: auth.py
src/auth/: __init__.py  models.py  security.py
src/db/: session.py
src/db/crud/: crud_user.py
src/db/models/: user.py
src/models/submodels/: carbon_footprint.py
src/persistence/: database.py
src/services/: dpp_service.py
src/validation/: validators.py
static/: docs.html  openapi.json  redoc.html
tests/unit/: test_visualization.py
